@@ -1,5 +1,7 @@
 2012-10-15  Charlie Zender  <zender@uci.edu>
 
+	* Bifurcate ncecat logic into GROUP_AGGREGATE and RECORD_AGGREGATE
+
 	* Initiate ncecat -G option for group aggregation
 
 	* Stop printing variable and dimension IDs, since these cluttered
